# Ludum-Dare-50-Entry

./: CMakeLists.txt  README.md
assets/: appicon.rc
scene-data/: scene.json
source/: entry-point.cc
source/application/: application.cc  application.h
source/ecs/: component.cc  component.h  entity.h  imgui.ini  physics-system.h  rendering-system.h  world.h
source/ecs/components/camera/: camera.cc  camera.h
source/ecs/components/model/: square-mesh.h  square-model.h
source/ecs/components/physics/: box-collider-2d.h  rigid-body-2d.h
source/ecs/components/shader/: shader.h  shaders-data.h
source/ecs/components/transform/: transform.cc  transform.h
source/game/: game.cc  game.h
source/ui/: ui.cc  ui.h
source/window/: window.cc  window.h
